[gd_scene load_steps=20 format=2]

[ext_resource path="res://Cenas/Poderes/Legislativo/Debates/Auxiliares/perguntae2expandida.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/Poderes/Legislativo/Debates/Auxiliares/respostaerrada1expandida.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Poderes/Legislativo/Debates/Auxiliares/respostaerrada2expandida.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Poderes/Legislativo/Debates/Auxiliares/perguntae1expandida.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Poderes/Legislativo/Debates/Auxiliares/perguntaexpandida.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Poderes/Legislativo/Debates/Auxiliares/respostacertaexpandida.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Scripts do Debate/health.gd" type="Script" id=7]
[ext_resource path="res://Recursos/Sprites/NPCs/HomemBrancoFrente.png" type="Texture" id=8]
[ext_resource path="res://Recursos/BalõesConversa/answer-removebg-preview.png" type="Texture" id=9]
[ext_resource path="res://Recursos/BalõesConversa/ChatNormal.png" type="Texture" id=10]
[ext_resource path="res://Recursos/BalõesConversa/answer-removebg-previewhover.png" type="Texture" id=11]
[ext_resource path="res://Recursos/BarraHP/HPProgress.png" type="Texture" id=12]
[ext_resource path="res://Recursos/Sprites/NPCs/MulherBrancaLado.png" type="Texture" id=13]
[ext_resource path="res://Recursos/BarraHP/HPUnder.png" type="Texture" id=14]
[ext_resource path="res://Recursos/Planos de Fundo/mesa.png" type="Texture" id=15]
[ext_resource path="res://Recursos/Sprites/NPCs/HomemNegroFrente.png" type="Texture" id=16]
[ext_resource path="res://Recursos/Sprites/NPCs/MulherNegraLado.png" type="Texture" id=17]

[sub_resource type="DynamicFontData" id=1]
hinting = 1
font_path = "res://Recursos/Fontes/Kenney Future.ttf"

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = SubResource( 1 )

[node name="Debate" type="Node2D"]
script = ExtResource( 7 )

[node name="Presidente" type="Sprite" parent="."]
position = Vector2( 290, 300 )
scale = Vector2( 1.5, 1.2 )
texture = ExtResource( 16 )
flip_h = true

[node name="Com1" type="Sprite" parent="."]
position = Vector2( 744, 317 )
texture = ExtResource( 13 )
flip_h = true

[node name="Com2" type="Sprite" parent="."]
position = Vector2( 900, 317 )
scale = Vector2( 0.65, 0.6 )
texture = ExtResource( 8 )

[node name="Com3" type="Sprite" parent="."]
position = Vector2( 835, 333 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1025.0
margin_bottom = 597.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comissão" type="Label" parent="."]
margin_left = 804.0
margin_top = 53.0
margin_right = 875.0
margin_bottom = 72.0
text = "Comissão 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jogador" type="Label" parent="."]
margin_left = 256.0
margin_top = 54.0
margin_right = 318.0
margin_bottom = 68.0
text = "Presidente"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VidaJogador" type="TextureProgress" parent="."]
margin_left = 169.0
margin_top = 76.0
margin_right = 1120.0
margin_bottom = 184.0
rect_scale = Vector2( 0.25, 0.25 )
value = 50.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 12 )
tint_progress = Color( 0.356863, 0.784314, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VidaOponente" type="TextureProgress" parent="."]
margin_left = 720.0
margin_top = 76.0
margin_right = 1671.0
margin_bottom = 184.0
rect_scale = Vector2( 0.25, 0.25 )
value = 50.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 12 )
fill_mode = 1
tint_progress = Color( 0.784314, 0.0588235, 0.0588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pergunta" type="TextureRect" parent="."]
margin_left = 359.0
margin_top = 68.0
margin_right = 1386.0
margin_bottom = 308.0
rect_scale = Vector2( 0.35, 0.76 )
texture = ExtResource( 10 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoPergunta" type="RichTextLabel" parent="."]
margin_left = 391.0
margin_top = 114.0
margin_right = 678.0
margin_bottom = 192.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Sr. Presidente, se a vantagem da Lei do Esporte, para o doador, é um redirecionamento de uma parte do imposto de renda para patrocinar o esporte, por que um cidadão se interessaria por uma Lei que somente distribui os impostos, não diminui para ele?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resposta Certa" type="TextureButton" parent="."]
margin_left = 334.0
margin_top = 239.0
margin_right = 1361.0
margin_bottom = 482.0
rect_scale = Vector2( 0.4, 0.45 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoRPC" type="RichTextLabel" parent="."]
margin_left = 394.0
margin_top = 284.0
margin_right = 655.0
margin_bottom = 333.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Porque o doador quer aproveitar a oportunidade e contribuir com seu país."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resposta Errada 1" type="TextureButton" parent="."]
margin_left = 334.0
margin_top = 309.0
margin_right = 1361.0
margin_bottom = 559.0
rect_scale = Vector2( 0.4, 0.45 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoRPE1" type="RichTextLabel" parent="."]
margin_left = 387.0
margin_top = 353.0
margin_right = 609.0
margin_bottom = 391.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Porque o governo não é responsável para cumprir seu dever sozinho."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resposta Errada 2" type="TextureButton" parent="."]
margin_left = 334.0
margin_top = 369.0
margin_right = 1361.0
margin_bottom = 619.0
rect_scale = Vector2( 0.4, 0.45 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoRPE2" type="RichTextLabel" parent="."]
margin_left = 398.0
margin_top = 413.0
margin_right = 620.0
margin_bottom = 451.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Porque, dessa forma, o doador está protegendo seu dinheiro do governo. "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerguntaExpandida" parent="." instance=ExtResource( 5 )]
visible = false

[node name="PerguntaExpandida2" parent="." instance=ExtResource( 4 )]
visible = false

[node name="PerguntaExpandida3" parent="." instance=ExtResource( 1 )]
visible = false

[node name="RespostaExpandida1" parent="." instance=ExtResource( 6 )]
visible = false

[node name="RespostaExpandida2" parent="." instance=ExtResource( 2 )]
visible = false

[node name="RespostaExpandida3" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Resposta Certa" to="." method="_on_Resposta_Certa_pressed"]
[connection signal="pressed" from="Resposta Errada 1" to="." method="_on_Resposta_Errada_1_pressed"]
[connection signal="pressed" from="Resposta Errada 2" to="." method="_on_Resposta_Errada_2_pressed"]
